--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Abrir Puerta del Portal</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Abrir Puerta - Sweet Apartment</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
       background-color: #f4f4f4;
-      text-align: center;
-      padding: 50px 20px;
       color: #333;
-      max-width: 500px;
-      margin: auto;
+      display: flex;
+      justify-content: center;
     }
-    #welcome {
-      font-size: 18px;
-      margin-bottom: 15px;
-    }
-    #welcome a {
-      color: #0077cc;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    #welcome a:hover {
-      text-decoration: underline;
-    }
-    #titulo-principal {
-      font-size: 28px;
-      margin-bottom: 25px;
-      font-weight: bold;
-    }
-    .instrucciones {
-      font-size: 16px;
-      color: #222;
-      margin: 0 auto 25px auto;
-      max-width: 350px;
+
+    .container {
+      max-width: 600px;
+      width: 100%;
+      padding: 20px;
+      box-sizing: border-box;
       text-align: center;
-      line-height: 1.4em;
     }
-    .instrucciones p {
-      margin: 8px 0;
+
+    h1 {
+      font-size: 26px;
+      margin-bottom: 20px;
     }
+
+    h2 {
+      font-size: 20px;
+      margin: 25px 0 10px;
+    }
+
+    p {
+      font-size: 16px;
+      margin: 10px 0;
+    }
+
     button {
       font-size: 22px;
       padding: 15px 40px;
@@ -50,146 +47,149 @@
       border-radius: 10px;
       cursor: pointer;
       transition: background-color 0.3s ease;
-      margin-bottom: 30px;
+      margin-top: 20px;
+      width: 100%;
+      max-width: 300px;
     }
+
     button:disabled {
       background-color: #a0a0a0;
       cursor: not-allowed;
     }
+
     #respuesta {
+      margin-top: 20px;
       font-weight: bold;
-      margin-bottom: 30px;
-      min-height: 22px;
     }
-    .direccion-titulo {
-      font-weight: bold;
+
+    .booking-link {
+      margin-bottom: 20px;
+    }
+
+    .booking-link a {
       font-size: 16px;
-      margin-bottom: 5px;
+      color: #0077cc;
+      text-decoration: none;
     }
+
+    .booking-link a:hover {
+      text-decoration: underline;
+    }
+
+    .direccion {
+      margin-top: 40px;
+      font-size: 15px;
+      color: #444;
+    }
+
     .direccion a {
-      color:#0077cc;
-      text-decoration:none;
-      font-size: 14px;
+      color: #0077cc;
+      text-decoration: none;
     }
+
     .direccion a:hover {
       text-decoration: underline;
     }
-    #lang-select {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      font-size: 16px;
-      cursor: pointer;
+
+    select {
+      margin-top: 10px;
+      font-size: 14px;
+      padding: 5px;
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 22px;
+      }
+
+      button {
+        font-size: 18px;
+        padding: 12px 30px;
+      }
     }
   </style>
 </head>
 <body>
+  <div class="container">
 
-  <select id="lang-select" onchange="cambiarIdioma()">
-    <option value="es">ES</option>
-    <option value="en">EN</option>
-  </select>
+    <div class="booking-link">
+      <strong>Bienvenido al <a href="https://www.booking.com/hotel/es/sweet-apartment-malaga12.es.html" target="_blank">Sweet Apartment</a></strong>
+    </div>
 
-  <div id="welcome">
-    Bienvenido al <a id="booking-link" href="https://www.booking.com/hotel/es/sweet-apartment-malaga12.es.html" target="_blank" rel="noopener noreferrer">Sweet Apartment</a>
-  </div>
+    <h1 id="titulo">Para abrir el Portal</h1>
 
-  <div id="titulo-principal">Para abrir el Portal</div>
+    <p id="paso1">Llama al 1ºF en el portal del Edificio Caracola</p>
+    <p id="paso2">Tras llamar, pulsa el botón "Abrir Puerta"</p>
 
-  <div class="instrucciones">
-    <p id="instruccion1">1. Llama al 1ºF en el portal del Edificio Caracola</p>
-    <p id="instruccion2">2. Tras llamar, pulsa el botón "Abrir Puerta"</p>
-  </div>
+    <button id="abrirBtn" onclick="abrirPuerta()">Abrir Puerta</button>
+    <div id="respuesta"></div>
 
-  <button id="abrirBtn" onclick="abrirPuerta()">Abrir Puerta</button>
+    <h2 id="direccionTitulo">Dirección en Google Maps:</h2>
+    <div class="direccion">
+      <a href="https://maps.app.goo.gl/dbK9AqANUYsq5zmJA" target="_blank">
+        Calle Doña de Tolosa 2, 1ºF (Edificio Caracola)
+      </a>
+    </div>
 
-  <div id="respuesta"></div>
-
-  <div class="direccion-titulo" id="direccion-titulo">Dirección en Google Maps:</div>
-  <div class="direccion">
-    <a id="mapa-link" href="https://maps.app.goo.gl/dbK9AqANUYsq5zmJA" target="_blank" rel="noopener noreferrer">
-      Calle Doña de Tolosa 2, 1ºF (Edificio Caracola)
-    </a>
+    <select id="lang" onchange="cambiarIdioma()">
+      <option value="es">🇪🇸 ES</option>
+      <option value="en">🇺🇸 EN</option>
+    </select>
   </div>
 
   <script>
-    const textos = {
-      es: {
-        welcome: 'Bienvenido al <a href="https://www.booking.com/hotel/es/sweet-apartment-malaga12.es.html" target="_blank" rel="noopener noreferrer">Sweet Apartment</a>',
-        titulo_principal: "Para abrir el Portal",
-        instruccion1: "1. Llama al 1ºF en el portal del Edificio Caracola",
-        instruccion2: "2. Tras llamar, pulsa el botón \"Abrir Puerta\"",
-        boton: "Abrir Puerta",
-        respuesta_enviando: "🔄 Enviando orden...",
-        respuesta_exito: "✅ ¡Puerta abierta!",
-        respuesta_error: "❌ No se pudo abrir.",
-        respuesta_error_conexion: "⚠️ Error de conexión.",
-        direccion_titulo: "Dirección en Google Maps:",
-        mapa_texto: "Calle Doña de Tolosa 2, 1ºF (Edificio Caracola)"
-      },
-      en: {
-        welcome: 'Welcome to <a href="https://www.booking.com/hotel/es/sweet-apartment-malaga12.es.html" target="_blank" rel="noopener noreferrer">Sweet Apartment</a>',
-        titulo_principal: "To open the Gate",
-        instruccion1: "1. Call 1ºF at the portal of Edificio Caracola",
-        instruccion2: "2. After calling, press the \"Open Gate\" button",
-        boton: "Open Gate",
-        respuesta_enviando: "🔄 Sending command...",
-        respuesta_exito: "✅ Gate opened!",
-        respuesta_error: "❌ Could not open.",
-        respuesta_error_conexion: "⚠️ Connection error.",
-        direccion_titulo: "Address on Google Maps:",
-        mapa_texto: "Calle Doña de Tolosa 2, 1ºF (Edificio Caracola)"
-      }
-    };
-
-    function cambiarIdioma() {
-      const idioma = document.getElementById("lang-select").value;
-      document.getElementById("welcome").innerHTML = textos[idioma].welcome;
-      document.getElementById("titulo-principal").innerText = textos[idioma].titulo_principal;
-      document.getElementById("instruccion1").innerText = textos[idioma].instruccion1;
-      document.getElementById("instruccion2").innerText = textos[idioma].instruccion2;
-      document.getElementById("abrirBtn").innerText = textos[idioma].boton;
-      document.getElementById("direccion-titulo").innerText = textos[idioma].direccion_titulo;
-      document.getElementById("mapa-link").innerText = textos[idioma].mapa_texto;
-    }
-
     async function abrirPuerta() {
-      const idioma = document.getElementById("lang-select").value;
-      const token = "f81f953fab1d52ce7a6d264464d55aefcdbdda02e51282e19b5c2d5b97d3fd287181dcde09b601b6";
-      const smartlockId = 9634589714;
-
       const boton = document.getElementById("abrirBtn");
       const mensaje = document.getElementById("respuesta");
 
       boton.disabled = true;
-      boton.style.backgroundColor = "#a0a0a0";
-      mensaje.innerText = textos[idioma].respuesta_enviando;
+      mensaje.innerText = "🔄 Enviando orden...";
 
       try {
         const response = await fetch("https://nuki-opener-arkm.vercel.app/api/abrir", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({ token, smartlockId })
+          method: "POST"
         });
 
         if (response.ok) {
-          mensaje.innerText = textos[idioma].respuesta_exito;
+          mensaje.innerText = "✅ ¡Puerta abierta!";
         } else {
-          mensaje.innerText = textos[idioma].respuesta_error;
+          mensaje.innerText = "❌ No se pudo abrir.";
         }
       } catch (error) {
-        mensaje.innerText = textos[idioma].respuesta_error_conexion;
+        mensaje.innerText = "⚠️ Error de conexión.";
       }
 
       setTimeout(() => {
         boton.disabled = false;
-        boton.style.backgroundColor = "#28a745";
+        mensaje.innerText = "";
       }, 3000);
     }
 
-    window.onload = cambiarIdioma;
+    function cambiarIdioma() {
+      const idioma = document.getElementById("lang").value;
+      const textos = {
+        es: {
+          titulo: "Para abrir el Portal",
+          paso1: "Llama al 1ºF en el portal del Edificio Caracola",
+          paso2: "Tras llamar, pulsa el botón \"Abrir Puerta\"",
+          direccion: "Dirección en Google Maps:",
+          boton: "Abrir Puerta"
+        },
+        en: {
+          titulo: "To open the gate",
+          paso1: "Call 1ºF at the entrance of Edificio Caracola",
+          paso2: "After calling, press the \"Open Gate\" button",
+          direccion: "Address on Google Maps:",
+          boton: "Open Gate"
+        }
+      };
+
+      document.getElementById("titulo").innerText = textos[idioma].titulo;
+      document.getElementById("paso1").innerText = textos[idioma].paso1;
+      document.getElementById("paso2").innerText = textos[idioma].paso2;
+      document.getElementById("direccionTitulo").innerText = textos[idioma].direccion;
+      document.getElementById("abrirBtn").innerText = textos[idioma].boton;
+    }
   </script>
 </body>
 </html>
