--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         boton: "Abrir Puerta",
         enviando: "🔄 Enviando orden...",
         abierto: "✅ ¡Puerta abierta!",
-        error: "❌ No se pudo abrir.",
+        error: "❌ No se pudo abrir. Contacta con +34639413602",
         conexion: "⚠️ Error de conexión."
       },
       en: {
@@ -161,7 +161,7 @@
         boton: "Open Gate",
         enviando: "🔄 Sending request...",
         abierto: "✅ Gate opened!",
-        error: "❌ Could not open.",
+        error: "❌ Could not open. Reach out +34639413602",
         conexion: "⚠️ Connection error."
       }
     };
